This file documents the revision history for Perl web application Veduta.

{{$NEXT}}

0.0.16    2016-06-11 22:01:35+02:00 Europe/Berlin

    - Fix attributions of map sources

0.0.15    2016-06-11 21:26:44+02:00 Europe/Berlin

    - Click on a marker with 1 view triggers a list sort

0.0.14    2016-06-11 17:21:17+02:00 Europe/Berlin

    - At the lowest level a click on the metadata opens the external viewer

0.0.13    2016-06-11 16:35:03+02:00 Europe/Berlin

    - Additional informations in the list header are only shown in debug mode 

0.0.12    2016-06-11 13:12:32+02:00 Europe/Berlin

    - Set language of the labels on the background map to german

0.0.11    2016-06-11 12:34:19+02:00 Europe/Berlin

    - Different marker at the lowest level (level without clustering) 

0.0.10    2016-06-10 07:43:11+02:00 Europe/Berlin

    - Sort views list on click on place markers
    - Change colors of view marker    
    - Change style sheets to less format
    - Closure compiler is used to optimize the javascript soure code

0.09      2016-04-26 16:40:16+02:00 Europe/Berlin

    - ngeo is used instead of angular-openlayers-directive as 
      javascript library to combine angularjs and openlayers

0.08      2016-04-06 14:08:50+02:00 Europe/Berlin

    - Deselecting boundaries if a high level admin unit is chosen
    - Unselecting previous selected points if one next to them is chosen 

0.07      2016-04-06 10:21:33+02:00 Europe/Berlin

 
    - Clicking on a point on the map get down to the next deeper 
      admin unit
    - Show boundaries only for lkr and gmd  

0.06      2016-04-05 14:25:59+02:00 Europe/Berlin

    - Clicking on the list get down to the next deeper admin unit

0.05      2016-04-03 22:00:53+02:00 Europe/Berlin

    - Sort list entries from selected admin unit on first position

0.04      2016-04-02 17:16:10+02:00 Europe/Berlin

    - Activate Mousewheel, add attribution information

0.03      2016-04-01 12:47:08+02:00 Europe/Berlin
